--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ category_dir: category/
 tag_dir: tag/
 
 # excerpt
-excerpt_separator: "\n\n\n\n"
+excerpt_separator: "----"
 
 # paginate
 gems: [jekyll-paginate]
